# advent_of_code_2022

./: Cargo.toml  README.md
day1.0/: Cargo.toml
day1.0/src/: main.rs
day1.1/src/: main.rs
day2.0/: Cargo.toml
day2.0/src/: main.rs
day2.1/src/: main.rs
day3.0/: Cargo.toml
day3.0/src/: main.rs
day3.1/src/: main.rs
day4.0/: Cargo.toml
day4.0/src/: main.rs
day4.1/src/: main.rs
day5.0/: Cargo.toml
day5.0/src/: main.rs
day5.1/: Cargo.toml
day5.1/src/: main.rs
